--- a/TaskManager.Persistence/TaskManager.Persistence.csproj
+++ b/TaskManager.Persistence/TaskManager.Persistence.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManager.Logic\TaskManager.Logic.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
